Update readme.md and fix startup error.